# minis-ai

./: .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  DEPLOY.md  README.md  TASKS.md  VISION.md  lefthook.yml  mise.toml  package-lock.json
backend/: .env.example  .env.production.example  cli.py  eval-report.json  eval-report.md  pyproject.toml
backend/alembic/: env.py
backend/app/: agreement_scorecard.py  artifact_review_cycles.py  db.py  main.py  review_cycles.py
backend/eval/: README.md  __init__.py  baselines.py  judge.py  report.py  review.py  review_cases.py  runner.py
backend/scripts/: calculate_review_agreement.py  check_username_duplicates.py  fidelity_test.py  ingest_github_archive.py  ingest_quick_check.py  ingest_status.py  langfuse_smoke.py  neon_branch_setup.py  prompt_diff_test.py  regen_mini.py  regen_via_fanout.py  run_fidelity_eval.py
backend/tests/: conftest.py  test_admin_settings_hardening.py  test_agent.py  test_agent_build_tools.py  test_agreement_scorecard.py  test_ai_signals.py  test_allie_377.py  test_allie_405_guards.py  test_allie_416_throttles.py  test_allie_440_quotes_context.py  test_auth_device.py  test_chat.py  test_chat_prompt.py  test_chat_prompt_antiregurgitation.py  test_chat_query_graph.py  test_chat_tools.py  test_chief.py  test_chief_breadth.py  test_chief_fanout.py  test_chief_typing_register.py  test_cli_decision_frameworks.py  test_cli_hosted_api.py  test_cli_pre_review.py  test_compaction.py  test_conversation_models.py  test_core.py  test_data_contracts.py  test_dataset_endpoint.py  test_dataset_generator.py  (+43 more)
(+351 files in other folders)
