[project]
name = "minis-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "cryptography>=46.0.4",
    "fastapi[standard]>=0.128.6",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.46",
    "sse-starlette>=3.2.0",
    "typer>=0.15.0",
    "trafilatura>=1.12.0",
    "uvicorn>=0.40.0",
    "pgvector>=0.4.2",
    "networkx>=3.6.1",
    "pydantic-ai>=1.82.0",
    "summarization-pydantic-ai>=0.1.4",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require DB)",
    "e2e: marks tests as end-to-end tests (require running server)",
    "live_llm: marks tests as live LLM contract tests (require explicit env and secrets)",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E402"]
